# libnv

./: .gitignore  Makefile.am  README.md  common_impl.h  configure.ac  libnv.pc.in  msgio.c  msgio.h  nv.h  nv_impl.h  nvendian.h  nvlist.c  nvlist_impl.h  nvpair.c  nvpair_impl.h
